# Truffle

./: BLUEPRINT.md  LICENSE  README.md  cli.py  pyproject.toml
agent/: client.py  explain.py  grounding.py  parse.py  render.py
agent/prompts/: explain_system.md  parse_system.md
core/: compiler.py  exceptions.py  ir.py  report.py
data/: scenarios.py
examples/: _generate_sample_prices.py  prices_sample.csv  spec_minvar.yaml
tests/: test_agent_loop.py  test_agent_parse.py  test_agent_render.py  test_compiler.py  test_cvar.py  test_grounding.py  test_ir.py
